# football_master

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  export_data.sh  main.cpp
.devcontainer/: devcontainer.json
db/init/: 01-schema.sql  schema.sql
qt/: CMakeLists.txt  Dockerfile  main.cpp  resources.qrc
qt/src/: MainWindow.cpp  MainWindow.hpp  main.cpp
qt/src/services/: Analyzer.cpp  Analyzer.hpp  Database.cpp  Database.hpp  Scraper.cpp  Scraper.hpp  Scrapper.cpp  Scrapper.hpp
qt/src/utils/: Data.hpp  data.cpp  data.hpp  utils.cpp  utils.hpp
scraper/: Dockerfile  dump  main.py  requirements.txt
src/: MainWindow.cpp  MainWindow.hpp
src/services/: Selector.hpp
